// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders communities 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <SvgMock
    color="blue"
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "fontSize": 14,
          },
          Object {
            "color": "blue",
          },
        ],
      ]
    }
  >
    Communities
  </Text>
</View>
`;

exports[`renders communities with notification dot 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "position": "relative",
        },
        Object {},
      ]
    }
  >
    <SvgMock
      color="blue"
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FF5532",
            "borderColor": "#ffffff",
            "borderRadius": 8,
            "borderWidth": 2,
            "height": 16,
            "position": "absolute",
            "right": -10,
            "top": -3,
            "width": 16,
          },
          Object {},
        ]
      }
    />
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "fontSize": 14,
          },
          Object {
            "color": "blue",
          },
        ],
      ]
    }
  >
    Communities
  </Text>
</View>
`;

exports[`renders notifications 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <SvgMock
    color="blue"
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "fontSize": 14,
          },
          Object {
            "color": "blue",
          },
        ],
      ]
    }
  >
    Notifications
  </Text>
</View>
`;

exports[`renders notifications with notification dot 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "position": "relative",
        },
        Object {},
      ]
    }
  >
    <SvgMock
      color="blue"
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FF5532",
            "borderColor": "#ffffff",
            "borderRadius": 8,
            "borderWidth": 2,
            "height": 16,
            "position": "absolute",
            "right": -10,
            "top": -3,
            "width": 16,
          },
          Object {},
        ]
      }
    />
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "fontSize": 14,
          },
          Object {
            "color": "blue",
          },
        ],
      ]
    }
  >
    Notifications
  </Text>
</View>
`;

exports[`renders people 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <SvgMock
    color="blue"
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "fontSize": 14,
          },
          Object {
            "color": "blue",
          },
        ],
      ]
    }
  >
    People
  </Text>
</View>
`;

exports[`renders steps 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <SvgMock
    color="blue"
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "fontSize": 14,
          },
          Object {
            "color": "blue",
          },
        ],
      ]
    }
  >
    Steps of Faith
  </Text>
</View>
`;

exports[`renders steps different tint color 1`] = `
<View
  style={
    Array [
      Object {},
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      },
    ]
  }
>
  <SvgMock
    color="grey"
  />
  <Text
    style={
      Array [
        Object {
          "color": "#505256",
        },
        Object {
          "fontFamily": "SourceSansPro-Regular",
        },
        Array [
          Object {
            "fontSize": 14,
          },
          Object {
            "color": "grey",
          },
        ],
      ]
    }
  >
    Steps of Faith
  </Text>
</View>
`;
